--- a/webdevelopment/Stimson_Template.html
+++ b/webdevelopment/Stimson_Template.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <!-- This uses basic HTML Coding for building Website --> 
+         <!--Title: 
+        Use:
+        Author: Sami Stimson
+        School/Term: University of Missouri, Summer 2025
+        Developed: 
+        Tested: ; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
-        <title></title>
+        <title>Template</title>
 </head>
 <body>
 
