--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <!-- This uses basic HTML Coding for building Home Page --> 
+        <!--Title: Home Page
+        Use: To explain to users what this website will show. 
+        Author: Sami Stimson
+        School/Term: University of Missouri, Summer 2025
+        Developed: June 15, 2025
+        Tested: June 15, 2025; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
         <title>Sami Stimson| Home</title>
 </head>
