--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <!-- This uses basic HTML Coding for building Website --> 
+        <!--Title: About Page
+        Use: To explain to users who I am and provide an education overview. 
+        Author: Sami Stimson
+        School/Term: University of Missouri, Summer 2025
+        Developed: June 15, 2025
+        Tested: June 15, 2025; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
         <title>Sami Stimson| About Page</title>
 </head>
