--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -9,6 +9,9 @@
         Tested: June 15, 2025; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
         <title>Sami Stimson| Home</title>
+        <link rel="stylesheet" 
+         href="styles.css">
+
 </head>
 <body>
 
