--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8">
         <title>Sami Stimson| Home</title>
         <link rel="stylesheet" 
-         href="styles.css">
+         href="style.css">
 
 </head>
 <body>
