--- a/webdevelopment/Stimson_Template.html
+++ b/webdevelopment/Stimson_Template.html
@@ -9,6 +9,9 @@
         Tested: ; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
         <title>Template</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
+
 </head>
 <body>
 
@@ -16,9 +19,21 @@
         <h1>Sami Stimson</h1>
     </header>
 
-    <nav>
-    <!-- Navigation will be added later -->
-    </nav>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li>
+      <a href="#projects.html">Projects</a> <!-- placeholder link -->
+      <ul class="dropdown">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+
 
     <main>
     </main>
