--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <!--Title: About Page
-        Use: To explain to users who I am and provide an education overview. 
-        Author: Sami Stimson
-        School/Term: University of Missouri, Summer 2025
-        Developed: June 15, 2025
-        Tested: June 15, 2025; Passed on Sarfari and Chrome browsers. -->
-        <meta charset="utf-8">
-        <title>Sami Stimson| About Page</title>
+ <head>
+    <!--Title: About Page
+    Use: To explain to users who I am and provide an education overview. 
+    Author: Sami Stimson
+    School/Term: University of Missouri, Summer 2025
+    Developed: June 15, 2025
+    Tested: June 15, 2025; Passed on Safari and Chrome browsers. -->
+    <meta charset="utf-8">
+    <title>Sami Stimson| About Page</title>
+    <link rel="stylesheet" href="style.css">
+
+    <style>
+      .resume-link {
+        display: inline-block;
+        padding: 10px 15px;
+        background-color: #3366cc;
+        color: white;
+        border: 2px solid #224488;
+        border-radius: 5px;
+        text-decoration: none;
+        margin-top: 10px;
+      }
+
+      .resume-link:hover {
+        background-color: #224488;
+      }
+    </style>
 </head>
 <body>
 
@@ -32,6 +50,12 @@
 
         <h3>Favorite Quote</h3>
         <blockquote>"Success is liking yourself, liking what you do, and liking how you do it.”- <em>Maya Angelou.</em></blockquote>
+
+        <h3>Resume</h3>
+        <p>
+         <a href="resume.pdf" class="resume-link" target="_blank">View My Resume (PDF)</a>
+        </p>
+
     </main>
 
     
