--- a/webdevelopment/Stimson_Template.html
+++ b/webdevelopment/Stimson_Template.html
@@ -25,13 +25,18 @@
     <li><a href="about.html">About</a></li>
     <li>
       <a href="#projects.html">Projects</a> <!-- placeholder link -->
+      <ul class="dropdown">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
 
 
-    <main>
-    </main>
+<main>
+</main>
 
   <footer>
     <p>Sami Stimson | sas82n@umsystem.edu</p>
