--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <title>Sami Stimson| About Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nav.css">
 
     <style>
       .resume-link {
@@ -34,9 +35,25 @@
         <h1>Sami Stimson</h1>
     </header>
 
-    <nav>
-    <!-- Navigation will be added later -->
-    </nav>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    
+    <li class="dropdown">
+      <a href="#">Projects</a>
+      <ul>
+        <li><a href="#project1.html">Project 1</a></li>
+        <li><a href="#project2.html">Project 2</a></li>
+        <li><a href="#project3.html">Project 3</a></li>
+        <li><a href="#project4.html">Project 4</a></li>
+      </ul>
+    </li>
+    
+    <li><a href="reflection.html">Reflection</a></li>
+    <li><a href="#contact.html">Contact</a></li>
+  </ul>
+</nav>
 
     <main>
         <h3>About Me</h3>
