--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -9,8 +9,8 @@
         Tested: June 15, 2025; Passed on Sarfari and Chrome browsers. -->
         <meta charset="utf-8">
         <title>Sami Stimson| Home</title>
-        <link rel="stylesheet" 
-         href="style.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
 
 </head>
 <body>
@@ -19,9 +19,26 @@
         <h1>Sami Stimson</h1>
     </header>
 
-    <nav>
-    <!-- Navigation will be added later -->
-    </nav>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    
+    <li class="dropdown">
+      <a href="#">Projects</a>
+      <ul>
+        <li><a href="#project1.html">Project 1</a></li>
+        <li><a href="#project2.html">Project 2</a></li>
+        <li><a href="#project3.html">Project 3</a></li>
+        <li><a href="#project4.html">Project 4</a></li>
+      </ul>
+    </li>
+    
+    <li><a href="reflection.html">Reflection</a></li>
+    <li><a href="#contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 
     <main>
         <h3>Welcome! I’m Sami Stimson — an MBA student at the University of Missouri and an aspiring finance professional based in St. Louis.</h3>
