--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -23,17 +23,27 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    
+
     <li class="dropdown">
       <a href="#">Projects</a>
       <ul>
-        <li><a href="#project1.html">Project 1</a></li>
-        <li><a href="#project2.html">Project 2</a></li>
-        <li><a href="#project3.html">Project 3</a></li>
-        <li><a href="#project4.html">Project 4</a></li>
+        <li class="dropdown">
+          <a href="#">Internships</a>
+          <ul>
+            <li><a href="#project1.html">Project 1</a></li>
+            <li><a href="#project2.html">Project 2</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Jobs</a>
+          <ul>
+            <li><a href="#project3.html">Project 3</a></li>
+            <li><a href="#project4.html">Project 4</a></li>
+          </ul>
+        </li>
       </ul>
     </li>
-    
+
     <li><a href="reflection.html">Reflection</a></li>
     <li><a href="#contact.html">Contact</a></li>
   </ul>
