--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -1,92 +1,107 @@
 <!DOCTYPE html>
 <html lang="en-US">
- <head>
-    <!--Title: About Page
-    Use: To explain to users who I am and provide an education overview. 
-    Author: Sami Stimson
-    School/Term: University of Missouri, Summer 2025
-    Developed: June 15, 2025
-    Tested: June 29, 2025; Passed on Safari and Chrome browsers. -->
-    <meta charset="utf-8">
-    <title>Sami Stimson| About Page</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nav.css">
-
-    <style>
-      .resume-link {
-        display: inline-block;
-        padding: 10px 15px;
-        background-color: #3366cc;
-        color: white;
-        border: 2px solid #224488;
-        border-radius: 5px;
-        text-decoration: none;
-        margin-top: 10px;
-      }
-
-      .resume-link:hover {
-        background-color: #224488;
-      }
-    </style>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sami Stimson | About Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
 <body>
 
-    <header>
-        <h1>Sami Stimson</h1>
-    </header>
+  <header>
+    <h1>Sami Stimson</h1>
+  </header>
 
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" class="active">About</a></li>
+      <li class="dropdown">
+        <a href="#">Projects</a>
+        <ul>
+            <li><a href="project1.html">Project 1</a></li>
+            <li><a href="project2.html">Project 2</a></li>
+            <li><a href="project3.html">Project 3</a></li>
+            <li><a href="project4.html">Project 4</a></li>
+            </ul>
+          </li>
+      <li><a href="reflection.html">Reflection</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-    <li class="dropdown">
-      <a href="#">Projects</a>
-      <ul>
-        <li class="dropdown">
-          <a href="#">Internships</a>
-          <ul>
-            <li><a href="#project1.html">Project 1</a></li>
-            <li><a href="#project2.html">Project 2</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#">Jobs</a>
-          <ul>
-            <li><a href="#project3.html">Project 3</a></li>
-            <li><a href="#project4.html">Project 4</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-
-    <li><a href="reflection.html">Reflection</a></li>
-    <li><a href="#contact.html">Contact</a></li>
-  </ul>
-</nav>
-
-    <main>
-        <h3>About Me</h3>
+  <main>
+    <!-- Headshot and About Me -->
+    <section class="bio-grid">
+      <div class="headshot">
+        <img src="SamiStimson.JPG" alt="Sami Stimson headshot">
+      </div>
+      <div class="about">
+        <h2>About Me</h2>
         <p>Hi! My name is Sami Stimson. I am from St. Louis, Missouri. I am a graduate student at the University of Missouri. I earned my bachelor’s degree in Finance and Banking in December 2024. I am currently completing my MBA and will graduate in December 2025.</p>
         <p>I recently started a year-round internship in corporate finance at Schnucks. I assist with budgeting, financial planning, and reporting. I’m only a week in, but I’m excited to learn more and gain hands-on experience. I look forward to building my skills in Excel, communication, and business analysis.</p>
         <p>I’m exploring various areas within finance to determine where I thrive the most. I hope to grow in a role that combines strategy, collaboration, and continuous learning. After graduation, I plan to return to St. Louis to start my career.</p>
-        <p>In my free time, I enjoy exploring new restaurants. I also visit coffee shops and follow fashion trends. I believe personal style and creative spaces reflect confidence and curiosity.This website shares my experience, goals, and professional journey. I hope you enjoy learning more about me and my work.</p> 
-        
-        <h3>Education Overview</h3>
-        <p><strong>University of Missouri</strong><br><strong>Master of Business Administration</strong><br>Certificate: Investments<br>Expected Graduation: December 2025<br><strong>University of Missouri</strong><br><strong>Bachelor of Science in Business Administration</strong><br>Emphasis: Finance and Banking with Real Estate<br>Graduated: December 2024</p>
+        <p>In my free time, I enjoy exploring new restaurants. I also visit coffee shops and follow fashion trends. I believe personal style and creative spaces reflect confidence and curiosity. This website shares my experience, goals, and professional journey. I hope you enjoy learning more about me and my work.</p>
+      </div>
+    </section>
 
-        <h3>Favorite Quote</h3>
-        <blockquote>"Success is liking yourself, liking what you do, and liking how you do it.”- <em>Maya Angelou.</em></blockquote>
+    <!-- Two-column layout: education + quote (left) | resume (right) -->
+    <section class="two-column">
+      <!-- Left Box: Education + Quote -->
+      <div class="left-box">
+        <div class="education">
+          <div class="edu-logo">
+            <img src="University_of_Missouri_logo.svg.png" alt="University of Missouri Logo">
+          </div>
+          <div class="edu-text">
+            <h2>Education Overview</h2>
+            <p><strong>University of Missouri</strong><br>
+            <strong>Master of Business Administration</strong><br>
+            Certificate: Investments<br>
+            Expected Graduation: December 2025</p>
 
-        <h3>Resume</h3>
-        <p>
-         <a href="resume.pdf" class="resume-link" target="_blank">View My Resume (PDF)</a>
-        </p>
+            <p><strong>University of Missouri</strong><br>
+            <strong>Bachelor of Science in Business Administration</strong><br>
+            Emphasis: Finance and Banking with Real Estate<br>
+            Graduated: December 2024</p>
+          </div>
+        </div>
 
-    </main>
+        <div class="quote">
+          <h2>Favorite Quote</h2>
+          <blockquote>“Success is liking yourself, liking what you do, and liking how you do it.” – <em>Maya Angelou</em></blockquote>
+        </div>
+      </div>
 
-    
-  <footer>
-    <p>Sami Stimson | sas82n@umsystem.edu</p>
+      <!-- Right Box: Resume -->
+      <div class="right-box">
+        <div class="resume">
+          <h2>Resume</h2>
+          <a href="resume.pdf" class="resume-link" target="_blank">View My Resume (PDF)</a>
+          <video class="resume-video" controls poster="resume-thumbnail.jpg">
+            <source src="ResumeVideo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer-horizontal">
+    <div class="footer-contact">
+      <p>📞 Phone: (314) 803-5454</p>
+      <p>✉️ Email: sas82n@umsystem.edu</p>
+      <p>📍 St. Louis, MO</p>
+      <p>
+        <a href="https://www.linkedin.com/in/samistimson" target="_blank">
+          <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px;">
+          LinkedIn Profile
+        </a>
+      </p>
+    </div>
     <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
   </footer>
+
+</body>
+</html>
