--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -20,36 +20,23 @@
     <h1>Sami Stimson</h1>
   </header>
 
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-
-    <li class="dropdown">
-      <a href="#">Projects</a>
-      <ul>
-        <li class="dropdown">
-          <a href="#">Internships</a>
-          <ul>
-            <li><a href="#project1.html">Project 1</a></li>
-            <li><a href="#project2.html">Project 2</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#">Jobs</a>
-          <ul>
-            <li><a href="#project3.html">Project 3</a></li>
-            <li><a href="#project4.html">Project 4</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-
-    <li><a href="reflection.html">Reflection</a></li>
-    <li><a href="#contact.html">Contact</a></li>
-  </ul>
-</nav>
-
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" class="active">About</a></li>
+      <li class="dropdown">
+        <a href="#">Projects</a>
+        <ul>
+            <li><a href="project1.html">Project 1</a></li>
+            <li><a href="project2.html">Project 2</a></li>
+            <li><a href="project3.html">Project 3</a></li>
+            <li><a href="project4.html">Project 4</a></li>
+            </ul>
+          </li>
+      <li><a href="reflection.html">Reflection</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
   <main>
     <h1>Personal Reflection</h1>
