--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -20,12 +20,12 @@
       <li class="dropdown">
         <a href="#">Projects</a>
         <ul>
-            <li><a href="project1.html">Project 1</a></li>
-            <li><a href="project2.html">Project 2</a></li>
-            <li><a href="project3.html">Project 3</a></li>
-            <li><a href="project4.html">Project 4</a></li>
-            </ul>
-          </li>
+          <li><a href="project1.html">Project 1</a></li>
+          <li><a href="project2.html">Project 2</a></li>
+          <li><a href="project3.html">Project 3</a></li>
+          <li><a href="project4.html">Project 4</a></li>
+        </ul>
+      </li>
       <li><a href="reflection.html">Reflection</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -57,14 +57,14 @@
           <div class="edu-text">
             <h2>Education Overview</h2>
             <p><strong>University of Missouri</strong><br>
-            <strong>Master of Business Administration</strong><br>
-            Certificate: Investments<br>
-            Expected Graduation: December 2025</p>
+              <strong>Master of Business Administration</strong><br>
+              Certificate: Investments<br>
+              Expected Graduation: December 2025</p>
 
             <p><strong>University of Missouri</strong><br>
-            <strong>Bachelor of Science in Business Administration</strong><br>
-            Emphasis: Finance and Banking with Real Estate<br>
-            Graduated: December 2024</p>
+              <strong>Bachelor of Science in Business Administration</strong><br>
+              Emphasis: Finance and Banking with Real Estate<br>
+              Graduated: December 2024</p>
           </div>
         </div>
 
@@ -79,10 +79,16 @@
         <div class="resume">
           <h2>Resume</h2>
           <a href="resume.pdf" class="resume-link" target="_blank">View My Resume (PDF)</a>
-          <video class="resume-video" controls poster="resume-thumbnail.jpg">
-            <source src="ResumeVideo.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <!-- Embedded YouTube video -->
+          <iframe
+            width="100%"
+            height="315"
+            src="https://www.youtube.com/embed/TCS1BEEtFU4"
+            title="Resume Video"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
         </div>
       </div>
     </section>
@@ -105,3 +111,4 @@
 
 </body>
 </html>
+
