--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -1,52 +1,88 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <!--Title: Home Page
-        Use: To explain to users what this website will show. 
-        Author: Sami Stimson
-        School/Term: University of Missouri, Summer 2025
-        Developed: June 15, 2025
-        Tested: June 29, 2025; Passed on Safari and Chrome browsers. -->
-        <meta charset="utf-8">
-        <title>Sami Stimson| Home</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="nav.css">
-
+<head>
+  <!--Title: Home Page
+  Use: To explain to users what this website will show. 
+  Author: Sami Stimson
+  School/Term: University of Missouri, Summer 2025
+  Developed: June 15, 2025
+  Tested: June 29, 2025; Passed on Safari and Chrome browsers. -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sami Stimson | Home</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
 <body>
 
-    <header>
-        <h1>Sami Stimson</h1>
-    </header>
+  <header>
+    <h1>Sami Stimson</h1>
+  </header>
 
   <nav>
+    <!-- Hamburger menu icon for mobile -->
+    <span class="hamburger">&#9776;</span> 
+
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li class="dropdown">
         <a href="#">Projects</a>
         <ul>
-            <li><a href="project1.html">Project 1</a></li>
-            <li><a href="project2.html">Project 2</a></li>
-            <li><a href="project3.html">Project 3</a></li>
-            <li><a href="project4.html">Project 4</a></li>
-            </ul>
-          </li>
+          <li><a href="project1.html">Project 1</a></li>
+          <li><a href="project2.html">Project 2</a></li>
+          <li><a href="project3.html">Project 3</a></li>
+          <li><a href="project4.html">Project 4</a></li>
+        </ul>
+      </li>
       <li><a href="reflection.html">Reflection</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-    <main>
-        <h3>Welcome! I’m Sami Stimson — an MBA student at the University of Missouri and an aspiring finance professional based in St. Louis.</h3>
-        <h3>Purpose, Goals, and Objectives</h3>
-        <p>This website serves as a professional portfolio to highlight my academic background, work experience, and career goals as I pursue opportunities in commercial real estate and corporate finance. I earned my Bachelor’s degree in Finance and Banking in December 2024 and am currently completing my MBA, set to graduate in December 2025. Over the past few years, I’ve developed strong skills in financial analysis, budgeting, and reporting through internships and part-time roles. This site offers an easy way to explore my resume, watch a short video introduction, and view highlights from key projects and leadership experiences. My goal is to connect with professionals and companies who share my interest in strategic growth and long-term value creation.</p>
-    </main>
+  <main>
+    <!-- Top row: Welcome + Logo -->
+    <section class="intro-grid">
+      <div class="welcome">
+        <h2>Welcome!</h2>
+        <p>I’m Sami Stimson — an MBA student at the University of Missouri and an aspiring finance professional based in St. Louis.</p>
+      </div>
+      <div class="logo">
+        <img src="logo.png" alt="Sami Stimson Logo">
+      </div>
+    </section>
 
-  <footer>
-    <p>Sami Stimson | sas82n@umsystem.edu</p>
-    <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
-  </footer>
+    <!-- Bottom box: Rationale -->
+    <section class="rationale">
+      <h3>Purpose, Goals, and Objectives</h3>
+      <p>This website serves as a professional portfolio to highlight my academic background, work experience, and career goals as I pursue opportunities in commercial real estate and corporate finance. I earned my Bachelor’s degree in Finance and Banking in December 2024 and am currently completing my MBA, set to graduate in December 2025. Over the past few years, I’ve developed strong skills in financial analysis, budgeting, and reporting through internships and part-time roles. This site offers an easy way to explore my resume, watch a short video introduction, and view highlights from key projects and leadership experiences. My goal is to connect with professionals and companies who share my interest in strategic growth and long-term value creation.</p>
+    </section>
+  </main>
+
+<footer class="footer-horizontal">
+  <div class="footer-contact">
+    <p>📞 Phone: (314) 803-5454</p>
+    <p>✉️ Email: sas82n@umsystem.edu</p>
+    <p>📍 St. Louis, MO</p>
+    <p>
+      <a href="https://www.linkedin.com/in/samistimson" target="_blank">
+        <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px; vertical-align: middle;">
+        LinkedIn Profile
+      </a>
+    </p>
+  </div>
+  <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
+</footer>
+
+  <!-- Add JS for hamburger toggle -->
+  <script>
+    const hamburger = document.querySelector('.hamburger');
+    const navMenu = document.querySelector('nav ul');
+
+    hamburger.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
