--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -13,23 +13,25 @@
     <h1>Sami Stimson</h1>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li class="dropdown">
-        <a href="#">Projects</a>
-        <ul>
-          <li><a href="project1.html">Project 1</a></li>
-          <li><a href="project2.html">Project 2</a></li>
-          <li><a href="project3.html">Project 3</a></li>
-          <li><a href="project4.html">Project 4</a></li>
-        </ul>
-      </li>
-      <li><a href="reflection.html">Reflection</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<nav>
+  <span class="hamburger">&#9776;</span> <!-- This is what was missing -->
+
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+    <li class="dropdown">
+      <a href="#">Projects</a>
+      <ul>
+        <li><a href="project1.html">Project 1</a></li>
+        <li><a href="project2.html">Project 2</a></li>
+        <li><a href="project3.html">Project 3</a></li>
+        <li><a href="project4.html">Project 4</a></li>
+      </ul>
+    </li>
+    <li><a href="reflection.html">Reflection</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
   <main>
     <!-- Headshot and About Me -->
@@ -108,6 +110,16 @@
     </div>
     <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
   </footer>
+  
+  <!-- Add JS for hamburger toggle -->
+  <script>
+  const hamburger = document.querySelector('.hamburger');
+  const navMenu = document.querySelector('nav ul');
+
+  hamburger.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
+  });
+</script>
 
 </body>
 </html>
