--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -21,42 +21,66 @@
   </header>
 
   <nav>
+    <span class="hamburger">&#9776;</span>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="active">About</a></li>
       <li class="dropdown">
         <a href="#">Projects</a>
         <ul>
-            <li><a href="project1.html">Project 1</a></li>
-            <li><a href="project2.html">Project 2</a></li>
-            <li><a href="project3.html">Project 3</a></li>
-            <li><a href="project4.html">Project 4</a></li>
-            </ul>
-          </li>
+          <li><a href="project1.html">Project 1</a></li>
+          <li><a href="project2.html">Project 2</a></li>
+          <li><a href="project3.html">Project 3</a></li>
+          <li><a href="project4.html">Project 4</a></li>
+        </ul>
+      </li>
       <li><a href="reflection.html">Reflection</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <main>
-    <h1>Personal Reflection</h1>
+<main>
+  <section class="reflection-box">
     <h2>My Path in Finance</h2>
 
-    <div class="reflection-box">
-      <p>My journey in business began with a curiosity about how companies make financial decisions and the stories behind the numbers. While I’ve always been detail-oriented, studying finance has helped me channel that strength into meaningful analysis. I’ve learned how financial data can influence strategic choices and guide organizations toward smarter investments, growth, and operational efficiency. What began as an interest has developed into a clear career path where I can combine critical thinking, communication, and problem-solving to drive value.</p>
+    <p>My journey in business began with a curiosity about how companies make financial decisions and the stories behind the numbers. While I’ve always been detail-oriented, studying finance has helped me channel that strength into meaningful analysis. I’ve learned how financial data can influence strategic choices and guide organizations toward smarter investments, growth, and operational efficiency. What began as an interest has developed into a clear career path where I can combine critical thinking, communication, and problem-solving to drive value.</p>
 
-      <p>Throughout my academic and professional experiences, I’ve had the opportunity to explore multiple industries — from corporate events to real estate and small business accounting. Each internship has given me practical knowledge and helped me discover what kind of work energizes me most. I’ve processed payments for hundreds of live events, built underwriting models for commercial property investments, and maintained accurate books for small businesses. These experiences taught me the importance of accuracy, time management, and proactive communication — all essential skills in any finance role.</p>
+    <p>Throughout my academic and professional experiences, I’ve had the opportunity to explore multiple industries — from corporate events to real estate and small business accounting. Each internship has given me practical knowledge and helped me discover what kind of work energizes me most. I’ve processed payments for hundreds of live events, built underwriting models for commercial property investments, and maintained accurate books for small businesses. These experiences taught me the importance of accuracy, time management, and proactive communication — all essential skills in any finance role.</p>
 
-      <p>Now, as an MBA student, I’m continuing to build technical skills while refining my leadership abilities. I thrive in collaborative environments where I can take ownership of projects and contribute to larger goals. I’m especially drawn to roles that involve financial modeling, budgeting, and long-term strategy. My dream is to return to St. Louis after graduation and work for a company or firm that values integrity, innovation, and employee development — particularly in the fields of commercial real estate or financial planning.</p>
+    <p>Now, as an MBA student, I’m continuing to build technical skills while refining my leadership abilities. I thrive in collaborative environments where I can take ownership of projects and contribute to larger goals. I’m especially drawn to roles that involve financial modeling, budgeting, and long-term strategy. My dream is to return to St. Louis after graduation and work for a company or firm that values integrity, innovation, and employee development — particularly in the fields of commercial real estate or financial planning.</p>
 
-      <p>Creating this website has helped me reflect on how far I’ve come and how much I’ve learned in a short amount of time. It’s more than just a collection of experiences; it’s a look into how I approach problems, connect with others, and contribute meaningfully to a team. I’m proud of the work I’ve done so far, and I look forward to continuing to grow and evolve as a professional in the years ahead.</p>
-    </div>
-  </main>
+    <p>Creating this website has helped me reflect on how far I’ve come and how much I’ve learned in a short amount of time. It’s more than just a collection of experiences; it’s a look into how I approach problems, connect with others, and contribute meaningfully to a team. I’m proud of the work I’ve done so far, and I look forward to continuing to grow and evolve as a professional in the years ahead.</p>
+  </section>
 
-  <footer>
-    <p>Sami Stimson | sas82n@umsystem.edu</p>
-    <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
-  </footer>
+<div class="reflection-image">
+  <img src="reflection.png" alt="Sami Stimson Portrait">
+</div>
+</main>
+
+<footer class="footer-horizontal">
+  <div class="footer-contact">
+    <p>📞 Phone: (314) 803-5454</p>
+    <p>✉️ Email: sas82n@umsystem.edu</p>
+    <p>📍 St. Louis, MO</p>
+    <p>
+      <a href="https://www.linkedin.com/in/samistimson" target="_blank">
+        <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px; vertical-align: middle;">
+        LinkedIn Profile
+      </a>
+    </p>
+  </div>
+  <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
+</footer>
+
+  <!-- Add JS for hamburger toggle -->
+  <script>
+    const hamburger = document.querySelector('.hamburger');
+    const navMenu = document.querySelector('nav ul');
+
+    hamburger.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
