--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -57,19 +57,29 @@
             <img src="University_of_Missouri_logo.svg.png" alt="University of Missouri Logo">
           </div>
           <div class="edu-text">
-            <h2>Education Overview</h2>
-            <p><strong>University of Missouri</strong><br>
-              <strong>Master of Business Administration</strong><br>
-              Certificate: Investments<br>
-              Expected Graduation: December 2025</p>
-
-            <p><strong>University of Missouri</strong><br>
-              <strong>Bachelor of Science in Business Administration</strong><br>
-              Emphasis: Finance and Banking with Real Estate<br>
-              Graduated: December 2024</p>
-          </div>
+        <h2>Education Overview</h2>
+        <ul class="education-list">
+          <li>
+            <strong>University of Missouri</strong><br>
+            Master of Business Administration<br>
+            Certificate: Investments<br>
+            Expected Graduation: December 2025
+          </li>
+          <li>
+            <strong>University of Missouri</strong><br>
+            Bachelor of Science in Business Administration<br>
+            Emphasis: Finance and Banking with Real Estate<br>
+            Graduated: December 2024
+          </li>
+          <li>
+           <strong>Rockwood Summit High School</strong><br>
+            High School Diploma<br>
+            Graduated: May 2021
+          </li>
+        </ul>
         </div>
-
+        </div>
+        
         <div class="quote">
           <h2>Favorite Quote</h2>
           <blockquote>“Success is liking yourself, liking what you do, and liking how you do it.” – <em>Maya Angelou</em></blockquote>
@@ -83,11 +93,8 @@
           <a href="resume.pdf" class="resume-link" target="_blank">View My Resume (PDF)</a>
           <!-- Embedded YouTube video -->
           <iframe
-            width="100%"
-            height="315"
             src="https://www.youtube.com/embed/TCS1BEEtFU4"
             title="Resume Video"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
           </iframe>
@@ -96,20 +103,29 @@
     </section>
   </main>
 
-  <footer class="footer-horizontal">
-    <div class="footer-contact">
-      <p>📞 Phone: (314) 803-5454</p>
-      <p>✉️ Email: sas82n@umsystem.edu</p>
-      <p>📍 St. Louis, MO</p>
-      <p>
-        <a href="https://www.linkedin.com/in/samistimson" target="_blank">
-          <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px;">
-          LinkedIn Profile
-        </a>
-      </p>
-    </div>
-    <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
-  </footer>
+<footer class="footer-horizontal">
+  <div class="footer-contact">
+    <p>
+      <img src="images/phone.png" alt="Phone Icon" class="footer-icon">
+      (314) 803-5454
+    </p>
+    <p>
+      <img src="images/email.png" alt="Email Icon" class="footer-icon">
+      <a href="mailto:sas82n@umsystem.edu">sas82n@umsystem.edu</a>
+    </p>
+    <p>
+      <img src="images/location.png" alt="Location Icon" class="footer-icon">
+      St. Louis, MO
+    </p>
+    <p>
+      <a href="https://www.linkedin.com/in/samistimson" target="_blank">
+        <img src="images/linkedin.png" alt="LinkedIn Icon" class="footer-icon" style="height: 30px;">
+        LinkedIn Profile
+      </a>
+    </p>
+  </div>
+  <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
+</footer>
   
   <!-- Add JS for hamburger toggle -->
   <script>
