--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -10,6 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sami Stimson | Home</title>
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="nav.css">
 </head>
@@ -61,12 +62,21 @@
 
 <footer class="footer-horizontal">
   <div class="footer-contact">
-    <p>📞 Phone: (314) 803-5454</p>
-    <p>✉️ Email: sas82n@umsystem.edu</p>
-    <p>📍 St. Louis, MO</p>
+    <p>
+      <img src="images/phone.png" alt="Phone Icon" class="footer-icon">
+      (314) 803-5454
+    </p>
+    <p>
+      <img src="images/email.png" alt="Email Icon" class="footer-icon">
+      <a href="mailto:sas82n@umsystem.edu">sas82n@umsystem.edu</a>
+    </p>
+    <p>
+      <img src="images/location.png" alt="Location Icon" class="footer-icon">
+      St. Louis, MO
+    </p>
     <p>
       <a href="https://www.linkedin.com/in/samistimson" target="_blank">
-        <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px; vertical-align: middle;">
+        <img src="images/linkedin.png" alt="LinkedIn Icon" class="footer-icon" style="height: 30px;">
         LinkedIn Profile
       </a>
     </p>
