--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -59,12 +59,21 @@
 
 <footer class="footer-horizontal">
   <div class="footer-contact">
-    <p>📞 Phone: (314) 803-5454</p>
-    <p>✉️ Email: sas82n@umsystem.edu</p>
-    <p>📍 St. Louis, MO</p>
+    <p>
+      <img src="images/phone.png" alt="Phone Icon" class="footer-icon">
+      (314) 803-5454
+    </p>
+    <p>
+      <img src="images/email.png" alt="Email Icon" class="footer-icon">
+      <a href="mailto:sas82n@umsystem.edu">sas82n@umsystem.edu</a>
+    </p>
+    <p>
+      <img src="images/location.png" alt="Location Icon" class="footer-icon">
+      St. Louis, MO
+    </p>
     <p>
       <a href="https://www.linkedin.com/in/samistimson" target="_blank">
-        <img src="linkedin.svg" alt="LinkedIn Logo" style="height: 30px; vertical-align: middle;">
+        <img src="images/linkedin.png" alt="LinkedIn Icon" class="footer-icon" style="height: 30px;">
         LinkedIn Profile
       </a>
     </p>
