--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -20,7 +20,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html" class="active">About</a></li>
     <li class="dropdown">
-      <a href="#">Projects</a>
+      <a href="project.html">Projects</a>
       <ul>
         <li><a href="project1.html">Project 1</a></li>
         <li><a href="project2.html">Project 2</a></li>
@@ -126,16 +126,6 @@
   </div>
   <p>&copy; 2025 Sami Stimson. All rights reserved.</p>
 </footer>
-  
-  <!-- Add JS for hamburger toggle -->
-  <script>
-  const hamburger = document.querySelector('.hamburger');
-  const navMenu = document.querySelector('nav ul');
-
-  hamburger.addEventListener('click', () => {
-    navMenu.classList.toggle('active');
-  });
-</script>
 
 </body>
 </html>
