--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -14,7 +14,9 @@
   </header>
 
 <nav>
-  <span class="hamburger">&#9776;</span> <!-- This is what was missing -->
+  <span class="hamburger">&#9776;</span> 
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
 
   <ul>
     <li><a href="index.html">Home</a></li>
