--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -22,9 +22,8 @@
   </header>
 
   <nav>
-    <!-- Hamburger menu icon for mobile -->
-    <span class="hamburger">&#9776;</span> 
-
+  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
