--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -21,6 +21,8 @@
   </header>
 
   <nav>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
