--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -21,7 +21,8 @@
   </header>
 
   <nav>
-    <span class="hamburger">&#9776;</span>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="active">About</a></li>
