--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -7,11 +7,11 @@
   School/Term: University of Missouri, Summer 2025
   Developed: July 2025
   Tested: July 2025; Passed on Safari and Chrome browsers. -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sami Stimson | Projects</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="nav.css" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   </header>
 
   <nav>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -51,7 +51,7 @@
             <p class="location">Reinsurance Group of America (RGA), Chesterfield, MO</p>
             <p class="dates">June 2024 – August 2024</p>
           </div>
-          <img src="images/Picture1.png" alt="RGA Internship Photo" class="project-image" />
+          <img src="images/Picture1.png" alt="RGA Internship Photo" class="project-image">
           <p class="reflection">
             This experience solidified my interest in real estate and strengthened my technical modeling and underwriting skills.
             I learned the importance of understanding market risk and gained confidence in analyzing deal structures and
@@ -84,7 +84,7 @@
             <p class="location">Maritz Global Events – Fenton, MO</p>
             <p class="dates">May 2023 – July 2023</p>
           </div>
-          <img src="images/Picture2.png" alt="Maritz Global Events Photo" class="project-image" />
+          <img src="images/Picture2.png" alt="Maritz Global Events Photo" class="project-image">
           <p class="reflection">
             This role taught me how to manage volume-heavy financial transactions while staying organized.
             I gained experience working with cross-functional teams, improved my Excel reporting skills, and
@@ -115,7 +115,7 @@
             <p class="location">Accounting for Central Illinois – Remote</p>
             <p class="dates">January 2025 – May 2025</p>
           </div>
-          <img src="images/Picture3.png" alt="QuickBooks Photo" class="project-image" />
+          <img src="images/Picture3.png" alt="QuickBooks Photo" class="project-image">
           <p class="reflection">
             This internship helped reinforce the foundational accounting concepts I learned in class and introduced me to working directly
             with small business clients. It sharpened my attention to detail and gave me confidence in using QuickBooks and Excel for real-world financial tasks.
@@ -146,7 +146,7 @@
             <p class="location">Columbia, MO</p>
             <p class="dates">August 2021 – May 2025</p>
           </div>
-          <img src="images/Picture4.jpg" alt="Delta Gamma Sorority Photo" class="project-image" />
+          <img src="images/Picture4.jpg" alt="Delta Gamma Sorority Photo" class="project-image">
           <p class="reflection">
             My leadership experience helped me develop event planning, financial oversight, and conflict resolution skills. These roles gave
             me valuable experience in decision-making, managing budgets, and working collaboratively with a team — all skills I’ll carry into my professional career.
@@ -156,12 +156,12 @@
         <!-- RIGHT COLUMN: Explanation -->
         <div class="project-explanation">
           <p>
-            <strong>Director of Social Events (Dec 2022 – Dec 2023)</strong><br />
+            <strong>Director of Social Events (Dec 2022 – Dec 2023)</strong><br>
             As Social Chair, I oversaw the planning of all chapter social events and managed a $50,000 budget.
             I coordinated with local venues, DJs, and small businesses to deliver engaging, safe, and well-attended events for over 200 members.
             I tracked expenses, negotiated contracts, and communicated logistics clearly with vendors and members.
-            <br /><br />
-            <strong>Director of House Management (May 2022 – May 2023)</strong><br />
+            <br><br>
+            <strong>Director of House Management (May 2022 – May 2023)</strong><br>
             Previously, I managed daily operations for a sorority house with 90 residents. I enforced safety rules,
             coordinated maintenance, and managed a $350 weekly dinner budget, collaborating with the VP of Finance.
           </p>
@@ -173,20 +173,20 @@
   <footer class="footer-horizontal">
     <div class="footer-contact">
       <p>
-        <img src="images/phone.png" alt="Phone Icon" class="footer-icon" />
+        <img src="images/phone.png" alt="Phone Icon" class="footer-icon">
         (314) 803-5454
       </p>
       <p>
-        <img src="images/email.png" alt="Email Icon" class="footer-icon" />
+        <img src="images/email.png" alt="Email Icon" class="footer-icon">
         <a href="mailto:sas82n@umsystem.edu">sas82n@umsystem.edu</a>
       </p>
       <p>
-        <img src="images/location.png" alt="Location Icon" class="footer-icon" />
+        <img src="images/location.png" alt="Location Icon" class="footer-icon">
         St. Louis, MO
       </p>
       <p>
         <a href="https://www.linkedin.com/in/samistimson" target="_blank" rel="noopener noreferrer">
-          <img src="images/linkedin.png" alt="LinkedIn Icon" class="footer-icon" style="height: 30px;" />
+          <img src="images/linkedin.png" alt="LinkedIn Icon" class="footer-icon" style="height: 30px;">
           LinkedIn Profile
         </a>
       </p>
