--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -14,7 +14,7 @@
   </header>
 
 <nav>
-  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <label for="nav-toggle" class="hamburger">&#9776;</label>
 
   <ul>
