--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <nav>
-  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
   <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
