--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -20,9 +20,11 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
       <li class="dropdown">
         <a href="project.html">Projects</a>
         <ul>
