--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -44,13 +44,13 @@
       <h2>Contact Me</h2>
       <form action="#" method="post" id="contactForm">
         <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required />
+        <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
 
         <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required />
+        <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+        <input type="email" id="email" name="email" placeholder="Enter your email address" required>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
