--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -40,24 +40,24 @@
   </nav>
 
   <main>
-    <section class="contact-form">
-      <h2>Contact Me</h2>
-      <form action="#" method="post" id="contactForm">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
+<section class="contact-form">
+  <h2>Contact Me</h2>
+  <form action="mailto:sas82n@umsystem.edu" method="POST" enctype="text/plain">
+    <label for="firstName">First Name: <span class="required">*</span></label>
+    <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required autofocus tabindex="1">
 
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
+    <label for="lastName">Last Name: <span class="required">*</span></label>
+    <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required tabindex="2">
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+    <label for="email">Email: <span class="required">*</span></label>
+    <input type="email" id="email" name="email" placeholder="Enter your email address" required tabindex="3">
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
+    <label for="message">Message: <span class="required">*</span></label>
+    <textarea id="message" name="message" rows="5" placeholder="Enter your message" required tabindex="4"></textarea>
 
-        <button type="submit">Send</button>
-      </form>
-    </section>
+    <button type="submit" tabindex="5">Send</button>
+  </form>
+</section>
       <div class="contact-image">
     <img src="images/contactme.png" alt="Contact Me Illustration">
   </div>
