--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -170,6 +170,50 @@
     </section>
   </main>
 
+  <figure>
+  <figcaption>Summary of Professional and Leadership Experience</figcaption>
+  <table>
+    <thead>
+      <tr>
+        <th scope="col">Project</th>
+        <th scope="col">Organization</th>
+        <th scope="col">Role</th>
+        <th scope="col">Skills Gained</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Real Estate Investment Intern</td>
+        <td>RGA</td>
+        <td>Intern</td>
+        <td>Financial Modeling, Market Research, Investment Analysis</td>
+      </tr>
+      <tr>
+        <td>Event Accountant Intern</td>
+        <td>Maritz Global Events</td>
+        <td>Intern</td>
+        <td>Excel Reporting, Vendor Coordination, Budget Reconciliation</td>
+      </tr>
+      <tr>
+        <td>Accounting Intern</td>
+        <td>Accounting for Central IL</td>
+        <td>Intern</td>
+        <td>QuickBooks, Time Management, Bank Reconciliation</td>
+      </tr>
+      <tr>
+        <td>Delta Gamma Leadership</td>
+        <td>Delta Gamma</td>
+        <td>Social Chair / House Manager</td>
+        <td>Event Planning, Budget Oversight, Leadership</td>
+      </tr>
+      <tr>
+        <td colspan="4">Total Leadership Roles: 4</td>
+      </tr>
+    </tfoot>
+    </tbody>
+  </table>
+</figure>
+
   <footer class="footer-horizontal">
     <div class="footer-contact">
       <p>
