--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -23,10 +23,10 @@
     <li class="dropdown">
       <a href="project.html">Projects</a>
       <ul>
-        <li><a href="project1.html">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
-        <li><a href="project3.html">Project 3</a></li>
-        <li><a href="project4.html">Project 4</a></li>
+        <li><a href="project.html#project1">Project 1</a></li>
+        <li><a href="project.html#project2">Project 2</a></li>
+        <li><a href="project.html#project3">Project 3</a></li>
+        <li><a href="project.html#project4">Project 4</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Reflection</a></li>
