--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -30,10 +30,10 @@
       <li class="dropdown">
         <a href="project.html">Projects</a>
         <ul>
-          <li><a href="project1.html">Project 1</a></li>
-          <li><a href="project2.html">Project 2</a></li>
-          <li><a href="project3.html">Project 3</a></li>
-          <li><a href="project4.html">Project 4</a></li>
+          <li><a href="project.html#project1">Project 1</a></li>
+          <li><a href="project.html#project2">Project 2</a></li>
+          <li><a href="project.html#project3">Project 3</a></li>
+          <li><a href="project.html#project4">Project 4</a></li>
         </ul>
       </li>
       <li><a href="reflection.html">Reflection</a></li>
@@ -56,7 +56,7 @@
     <!-- Bottom box: Rationale -->
     <section class="rationale">
       <h3>Purpose, Goals, and Objectives</h3>
-      <p>This website serves as a professional portfolio to highlight my academic background, work experience, and career goals as I pursue opportunities in commercial real estate and corporate finance. I earned my Bachelor’s degree in Finance and Banking in December 2024 and am currently completing my MBA, set to graduate in December 2025. Over the past few years, I’ve developed strong skills in financial analysis, budgeting, and reporting through internships and part-time roles. This site offers an easy way to explore my resume, watch a short video introduction, and view highlights from key projects and leadership experiences. My goal is to connect with professionals and companies who share my interest in strategic growth and long-term value creation.</p>
+      <p>This website serves as a professional portfolio to highlight my academic background, work experience, and career goals as I pursue opportunities in commercial real estate and corporate finance. I earned my Bachelor’s degree in Finance and Banking in December 2024 and am currently completing my MBA, which I am set to graduate with in December 2025. Over the past few years, I’ve developed strong skills in financial analysis, budgeting, and reporting through internships and part-time roles. This site offers an easy way to explore my resume, watch a short video introduction, and view highlights from key projects and leadership experiences. My goal is to connect with professionals and companies who share my interest in strategic growth and long-term value creation.</p>
     </section>
   </main>
 
