--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -27,12 +27,12 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li class="dropdown">
-        <a href="project.html">Projects</a>
+        <a href="#projects">Projects</a>
         <ul>
-          <li><a href="project.html#project1">Project 1</a></li>
-          <li><a href="project.html#project2">Project 2</a></li>
-          <li><a href="project.html#project3">Project 3</a></li>
-          <li><a href="project.html#project4">Project 4</a></li>
+          <li><a href="#project1">Project 1</a></li>
+          <li><a href="#project2">Project 2</a></li>
+          <li><a href="#project3">Project 3</a></li>
+          <li><a href="#project4">Project 4</a></li>
         </ul>
       </li>
       <li><a href="reflection.html">Reflection</a></li>
@@ -125,12 +125,10 @@
         <!-- RIGHT COLUMN: Explanation -->
         <div class="project-explanation">
           <p>
-            As an accounting intern, I enter daily financial transactions into QuickBooks, ensuring accurate and
-            up-to-date financial records for small business clients. I also conduct monthly bank reconciliations to
-            resolve discrepancies and provide clean financials. Working remotely, I’ve built strong time management
-            skills and the ability to work independently while still communicating with clients and supervisors regularly.
-            This role has given me practical experience with double-entry accounting, account reconciliation, and the general ledger.
-            It’s also allowed me to learn how accounting supports broader business decision-making.
+            As an accounting intern, I enter daily financial transactions into QuickBooks, ensuring that small business clients maintain accurate and up-to-date financial records. 
+            I also conduct monthly bank reconciliations to resolve discrepancies and provide accurate financial records. Working remotely, I’ve developed strong time management skills 
+            and the ability to work independently while maintaining regular communication with clients and supervisors. This role has provided me with practical experience in double-entry 
+            accounting, account reconciliation, and general ledger management. It’s also allowed me to learn how accounting supports broader business decision-making.
           </p>
         </div>
       </div>
@@ -148,8 +146,8 @@
           </div>
           <img src="images/Picture4.jpg" alt="Delta Gamma Sorority Photo" class="project-image">
           <p class="reflection">
-            My leadership experience helped me develop event planning, financial oversight, and conflict resolution skills. These roles gave
-            me valuable experience in decision-making, managing budgets, and working collaboratively with a team — all skills I’ll carry into my professional career.
+            My leadership experience has helped me develop skills in event planning, financial oversight, and conflict resolution. These roles provided me with valuable experience 
+            in decision-making, budget management, and collaborative teamwork —skills that I’ll carry into my professional career.
           </p>
         </div>
 
@@ -209,7 +207,6 @@
       <tr>
         <td colspan="4">Total Leadership Roles: 4</td>
       </tr>
-    </tfoot>
     </tbody>
   </table>
 </figure>
