--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -168,47 +168,49 @@
     </section>
   </main>
 
-  <figure>
+<figure>
   <figcaption>Summary of Professional and Leadership Experience</figcaption>
-  <table>
-    <thead>
-      <tr>
-        <th scope="col">Project</th>
-        <th scope="col">Organization</th>
-        <th scope="col">Role</th>
-        <th scope="col">Skills Gained</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Real Estate Investment Intern</td>
-        <td>RGA</td>
-        <td>Intern</td>
-        <td>Financial Modeling, Market Research, Investment Analysis</td>
-      </tr>
-      <tr>
-        <td>Event Accountant Intern</td>
-        <td>Maritz Global Events</td>
-        <td>Intern</td>
-        <td>Excel Reporting, Vendor Coordination, Budget Reconciliation</td>
-      </tr>
-      <tr>
-        <td>Accounting Intern</td>
-        <td>Accounting for Central IL</td>
-        <td>Intern</td>
-        <td>QuickBooks, Time Management, Bank Reconciliation</td>
-      </tr>
-      <tr>
-        <td>Delta Gamma Leadership</td>
-        <td>Delta Gamma</td>
-        <td>Social Chair / House Manager</td>
-        <td>Event Planning, Budget Oversight, Leadership</td>
-      </tr>
-      <tr>
-        <td colspan="4">Total Leadership Roles: 4</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Project</th>
+          <th scope="col">Organization</th>
+          <th scope="col">Role</th>
+          <th scope="col">Skills Gained</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Project">Real Estate Investment Intern</td>
+          <td data-label="Organization">RGA</td>
+          <td data-label="Role">Intern</td>
+          <td data-label="Skills Gained">Financial Modeling, Market Research, Investment Analysis</td>
+        </tr>
+        <tr>
+          <td data-label="Project">Event Accountant Intern</td>
+          <td data-label="Organization">Maritz Global Events</td>
+          <td data-label="Role">Intern</td>
+          <td data-label="Skills Gained">Excel Reporting, Vendor Coordination, Budget Reconciliation</td>
+        </tr>
+        <tr>
+          <td data-label="Project">Accounting Intern</td>
+          <td data-label="Organization">Accounting for Central IL</td>
+          <td data-label="Role">Intern</td>
+          <td data-label="Skills Gained">QuickBooks, Time Management, Bank Reconciliation</td>
+        </tr>
+        <tr>
+          <td data-label="Project">Delta Gamma Leadership</td>
+          <td data-label="Organization">Delta Gamma</td>
+          <td data-label="Role">Social Chair / House Manager</td>
+          <td data-label="Skills Gained">Event Planning, Budget Oversight, Leadership</td>
+        </tr>
+        <tr>
+          <td colspan="4">Total Leadership Roles: 4</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </figure>
 
   <footer class="footer-horizontal">
