--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -22,18 +22,18 @@
   </header>
 
   <nav>
-  <input type="checkbox" id="nav-toggle" class="nav-toggle">
-  <label for="nav-toggle" class="hamburger">&#9776;</label>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="hamburger">&#9776;</label>
     <ul>
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li class="dropdown">
-        <a href="project.html">Projects</a>
+        <a href="#Jobs">Jobs</a>
         <ul>
-          <li><a href="project.html#project1">Project 1</a></li>
-          <li><a href="project.html#project2">Project 2</a></li>
-          <li><a href="project.html#project3">Project 3</a></li>
-          <li><a href="project.html#project4">Project 4</a></li>
+          <li><a href="jobs.html#RGA">RGA</a></li>
+          <li><a href="jobs.html#Maritz">Maritz</a></li>
+          <li><a href="jobs.html#Accounting-for-Central-Illinois">Accounting for Central Illinois</a></li>
+          <li><a href="jobs.html#Delta-Gamma">Delta Gamma</a></li>
         </ul>
       </li>
       <li><a href="reflection.html">Reflection</a></li>
